# clone_twitter

./: .env.template  .gitignore  .gitlab-ci.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yaml  nginx.conf  prometheus.yaml  pyproject.toml
alembic/versions/: 370e6bb5aaa7_create_likes_table_and_relatationship_.py  9f8602c87159_create_profile_table.py  f1d071681697_create_tweets_table.py  f3d9b58c2f3d_create_following_association_table.py
backend/: clone_twitter.py  conf.py  custom_handlers.py  database.py  models.py  schemas.py
static/: index.html
tests/: conftest.py  test_api.py
