[project]
name = "python-advanced-diploma1"
version = "0.1.0"
description = ""
authors = [
    {name = "user",email = "ilya.melnichuk.2007@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic (>=1.18.4,<2.0.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "fastapi (>=0.135.2,<0.136.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "uvicorn (>=0.42.0,<0.43.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
